数据统计 销售数据

--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -23,6 +23,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -65,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -173,6 +175,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -198,6 +201,7 @@
             </a>
           </div>
           <div class="col-lg-4">
+            <a class="nodecation" href="./datastatistics_due.html">
             <div class="panel widget bg-warning">
               <div class="row row-table">
                 <div class="col-xs-4 text-center bg-warning-dark pv-lg">
@@ -211,8 +215,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="col-lg-4">
+            <a class="nodecation" href="./datastatistics_taste.html">
             <div class="panel widget bg-primary">
               <div class="row row-table">
                 <div class="col-xs-4 text-center bg-primary-dark pv-lg">
@@ -226,8 +232,10 @@
                 </div>
               </div>
             </div>
+            </a>
           </div>
           <div class="col-lg-6">
+            <a class="nodecation" href="./datastatistics_todayrecord.html">
               <div class="panel widget bg-purple">
                 <div class="row row-table">
                   <div class="col-xs-4 text-center bg-purple-dark pv-lg">
@@ -241,22 +249,23 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="panel widget bg-danger">
-                  <div class="row row-table">
-                    <div class="col-xs-4 text-center bg-danger-dark pv-lg">
-                      <em class="icon-map fa-3x"></em>
-                    </div>
-                    <div class="col-xs-8 pv-lg">
-                      <div class="h2 mt0">100
-                        <small>￥</small>
-                      </div>
-                      <div class="text-uppercase">当前余额</div>
-                    </div>
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <div class="panel widget bg-danger">
+              <div class="row row-table">
+                <div class="col-xs-4 text-center bg-danger-dark pv-lg">
+                  <em class="icon-map fa-3x"></em>
+                </div>
+                <div class="col-xs-8 pv-lg">
+                  <div class="h2 mt0">100
+                    <small>￥</small>
                   </div>
+                  <div class="text-uppercase">当前余额</div>
                 </div>
               </div>
+            </div>
+          </div>
         </div>
 
         <div class="row">
@@ -265,6 +274,7 @@
               <div class="panel-heading">续费情况</div>
               <div class="panel-body">
                 <div class="col-lg-3 col-sm-6">
+                  <a class="nodecation normalcolor" href="./datastatistics_renewtoday.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -274,9 +284,11 @@
                       <p class="text-muted">今日续费学员</p>
                     </div>
                   </div>
+                  </a>
                 </div>
 
                 <div class="col-lg-3 col-sm-6">
+                    <a class="nodecation normalcolor" href="./datastatistics_renewlengthtoday.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -286,8 +298,10 @@
                       <p class="text-muted">今日续费时长</p>
                     </div>
                   </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-sm-6">
+                    <a class="nodecation normalcolor" href="./datastatistics_losstoday.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -298,8 +312,10 @@
                       <span class="text-danger">30天前过期且未续费的学员</span>
                     </div>
                   </div>
+                    </a>
                 </div>
                 <div class="col-lg-3">
+                    <a class="nodecation normalcolor" href="./datastatistics_changetoday.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -310,6 +326,7 @@
                       <p class="text-danger">体验账号今日完成续费</p>
                     </div>
                   </div>
+                    </a>
                 </div>
 
               </div>
@@ -322,7 +339,18 @@
             <div id="" class="panel panel-primary">
               <div class="panel-heading">续费查询 </div>
               <div class="panel-body">
+                <div class="form-group col-sm-12">
+                    <label class="col-sm-2">查询期限：</label>
+                    <div class="col-sm-4">
+                      <select name="" id="" class="form-control">
+                        <option value="">三天</option>
+                        <option value="1">七天</option>
+                        <option value="2">三十天</option>
+                      </select>
+                    </div>
+                  </div>
                 <div class="col-lg-3 col-sm-6">
+                    <a class="nodecation normalcolor" href="./datastatistics_renew.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -332,9 +360,11 @@
                       <p class="text-muted">续费学员</p>
                     </div>
                   </div>
+                    </a>
                 </div>
 
                 <div class="col-lg-3 col-sm-6">
+                    <a class="nodecation normalcolor" href="./datastatistics_renewlength.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -344,8 +374,10 @@
                       <p class="text-muted">总续费时长</p>
                     </div>
                   </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-sm-6">
+                    <a class="nodecation normalcolor" href="./datastatistics_loss.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -356,8 +388,10 @@
                       <p class="text-danger">30天前过期且未续费的学员</p>
                     </div>
                   </div>
+                    </a>
                 </div>
                 <div class="col-lg-3">
+                    <a class="nodecation normalcolor" href="./datastatistics_change.html">
                   <div class="panel widget">
                     <div class="panel-body text-center">
                       <div class="text-right text-muted">
@@ -368,6 +402,7 @@
                       <p class="text-danger">体验账号今日完成续费</p>
                     </div>
                   </div>
+                  </a>
                 </div>
 
               </div>
@@ -436,6 +471,16 @@
             <div id="" class="panel panel-primary">
               <div class="panel-heading">学况查询 </div>
               <div class="panel-body">
+                <div class="form-group col-sm-12">
+                  <label class="col-sm-2">查询期限：</label>
+                  <div class="col-sm-4">
+                    <select name="" id="" class="form-control">
+                      <option value="">三天</option>
+                      <option value="1">七天</option>
+                      <option value="2">三十天</option>
+                    </select>
+                  </div>
+                </div>
                 <div class="col-lg-3 col-sm-6">
                   <div class="panel widget">
                     <div class="panel-body text-center">
@@ -506,6 +551,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -519,6 +565,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
