--- a/src/html/salesdata.html
+++ b/src/html/salesdata.html
@@ -23,6 +23,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -65,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -177,6 +179,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -187,82 +190,57 @@
           <div class="col-xs-12">
             <!-- START panel-->
             <div class="panel-default">
-              <div class="panel-heading">
-                <form class="text-right form-lineH">
-                  <div class="row">
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">选择班级：</label>
-                      <div class="col-sm-8">
-                        <select name="" id="" class="form-control">
-                          <option value="">全部</option>
-                          <option value="1">班级1</option>
-                          <option value="2">班级2</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="form-group col-sm-3">
-                      <label class="col-sm-4">学生手机：</label>
-                      <div class="col-sm-8">
-                        <input type="tel" name="" class="form-control">
-                      </div>
-                    </div>
-                    <div class="col-sm-1">
-                      <button type="button" class="btn btn-primary">搜索</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
               <!-- START table-responsive-->
               <div class="panel-heading">
                 <div class="table-responsive">
                   <table id="" class="table table-bordered table-hover">
                     <thead>
                       <tr>
-                        <th>学生手机</th>
-                        <th>姓名</th>
-                        <th>总学习效率</th>
-                        <th>最后一天学习效率</th>
-                        <th>连续未学</th>
-                        <th>学生总积分</th>
-                        <th>总学习天数</th>
+                        <th>月份</th>
+                        <th>月末余额</th>
+                        <th class="sorting">学校储值情况</th>
+                        <th class="sorting">本月续费人数</th>
+                        <th class="sorting">本月总充值（元）</th>
+                        <th class="sorting">本月30天续费（次）</th>
+                        <th class="sorting">本月60天续费</th>
                         <th>操作</th>
                       </tr>
                     </thead>
                     <tbody id="designerlist">
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td>2018年06月</td>
+                        <td class="text-danger">9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
                         <td>
-                          <a class="btn btn-primary" href="salesdata_info.html">查看</a>
+                          <a class="btn btn-primary" href="salesdata_info.html">余额明细</a>
                         </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td>2018年06月</td>
+                        <td class="text-danger">9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
                         <td>
-                          <a class="btn btn-primary" href="salesdata_info.html">查看</a>
+                          <a class="btn btn-primary" href="salesdata_info.html">余额明细</a>
                         </td>
                       </tr>
                       <tr>
-                        <td>18000000000</td>
-                        <td>名字名字</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>52%（01:13:59/02:22:05）</td>
-                        <td>5天</td>
-                        <td>500</td>
-                        <td>500</td>
+                        <td>2018年06月</td>
+                        <td class="text-danger">9999999</td>
+                        <td>+9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
+                        <td>9999999</td>
                         <td>
-                          <a class="btn btn-primary" href="salesdata_info.html">查看</a>
+                          <a class="btn btn-primary" href="salesdata_info.html">余额明细</a>
                         </td>
                       </tr>
                     </tbody>
@@ -306,6 +284,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -331,6 +310,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -344,6 +324,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
